# charguychess

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
config/: cgc.conf
src/: CMakeLists.txt  InputDriverTest.cpp  main.cpp  version.hpp.in
src/chess/: Board.cpp  Board.hpp  CastleStatus.cpp  CastleStatus.hpp  ChessDefinitions.cpp  ChessDefinitions.hpp  GameHistory.cpp  GameHistory.hpp  GameLogic.cpp  GameLogic.hpp  GameTurn.cpp  GameTurn.hpp  IBoardObserver.cpp  IBoardObserver.hpp  LegalSquares.cpp  LegalSquares.hpp  Move.cpp  Move.hpp  Pgn.cpp  Pgn.hpp  PlayerPiece.cpp  PlayerPiece.hpp  Square.cpp  Square.hpp  SquaresList.cpp  SquaresList.hpp
src/chess/uci/: IProcessIoListener.cpp  IProcessIoListener.hpp  IUciEngineListener.cpp  IUciEngineListener.hpp  Process.cpp  Process.hpp  UciEngine.cpp  UciEngine.hpp
src/event-loop/: EventLoop.cpp  EventLoop.hpp  HandledByLibevent.cpp  HandledByLibevent.hpp  HandledIoLibevent.cpp  HandledIoLibevent.hpp  HandledQuitSignal.cpp  HandledQuitSignal.hpp  HandledSignalLibevent.cpp  HandledSignalLibevent.hpp  IHandledIo.cpp  IHandledIo.hpp  IHandledSignal.cpp  IHandledSignal.hpp  ITimedOut.cpp  ITimedOut.hpp  Timer.cpp  Timer.hpp
src/logging/: ILogSink.cpp  ILogSink.hpp  ILogger.cpp  ILogger.hpp  LogMacros.hpp  LogStream.cpp  LogStream.hpp  Logger.cpp  Logger.hpp  LoggerConsole.cpp  LoggerConsole.hpp  LoggerInstance.cpp  LoggerInstance.hpp  LoggerNull.cpp  LoggerNull.hpp  NullLogSink.cpp  NullLogSink.hpp
src/options/: Options.cpp  Options.hpp  UciOptions.cpp  UciOptions.hpp  UciPlayerOptions.cpp  UciPlayerOptions.hpp
src/ui/: ConsoleUI.cpp  ConsoleUI.hpp
src/ui/console/: ConsoleUI.cpp  ConsoleUI.hpp
src/ui/hardware/: BitBoard.cpp  BitBoard.hpp  BoardInputDriverCharGuy.cpp  BoardInputDriverCharGuy.hpp  BoardInputDriverPipe.cpp  BoardInputDriverPipe.hpp  BoardInputDriverPolled.cpp  BoardInputDriverPolled.hpp  BoardValue.hpp  ChessHardware.cpp  ChessHardware.hpp  ChessHardwareFactory.cpp  ChessHardwareFactory.hpp  DispatchedBoardInputEvent.cpp  DispatchedBoardInputEvent.hpp  IBoardInputDriver.cpp  IBoardInputDriver.hpp  IBoardInputDriverObservable.cpp  IBoardInputDriverObservable.hpp  IBoardInputObserver.cpp  IBoardInputObserver.hpp
src/ui/hardware/cgc/: BoardInputDriverCharGuy.cpp  BoardInputDriverCharGuy.hpp
src/ui/hardware/simulation/: BoardInputDriverPipe.cpp  BoardInputDriverPipe.hpp
src/ui/hardware/states/: HardwareStateCapture.cpp  HardwareStateCapture.hpp  HardwareStateNull.cpp  HardwareStateNull.hpp  HardwareStatePanic.cpp  HardwareStatePanic.hpp  HardwareStatePieceLifted.cpp  HardwareStatePieceLifted.hpp  HardwareStatePlayerThinking.cpp  HardwareStatePlayerThinking.hpp  HardwareStatePool.cpp  HardwareStatePool.hpp  IHardwareState.cpp  IHardwareState.hpp  IHardwareStatePool.cpp  IHardwareStatePool.hpp
tests/: BitBoardTest.cpp  BoardTest.cpp  CMakeLists.txt  DispatchedBoardInputEventTest.cpp  GameLogicTest.cpp  HardwareStatePanicTest.cpp  HardwareStatePieceLiftedTest.cpp  HardwareStatePlayerThinkingTest.cpp  LegalSquaresTest.cpp  MoveTest.cpp  PlayerPieceTest.cpp  SquareTest.cpp  SquaresListTest.cpp  main.cpp
tests/mocks/: IBoardInputObserverMock.cpp  IBoardInputObserverMock.hpp  IBoardObserverMock.cpp  IBoardObserverMock.hpp  IHardwareStateMock.cpp  IHardwareStateMock.hpp  IHardwareStatePoolMock.cpp  IHardwareStatePoolMock.hpp
tests/simulation/: e2e4  e2e4InOne  illegalCapture  illegalMove  liftIllegalPiece  testGame  tooManyPieces  twoWhitePawnsLifted
tests/utils/: BoardValueComparator.hpp
